@@ -7,6 +7,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
+import java.net.URI;
 import java.text.Normalizer;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
@@ -100,9 +101,8 @@ public class ScraperService{
     }
 
     public String  geoAPIgetLatLong(String request, String zip) throws IOException{
-        @SuppressWarnings("deprecation")
         // request
-        URL url = new URL(request);
+        URL url = URI.create(request).toURL();
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
     
         connection.setConnectTimeout(5000);
